<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IONIX Settings</string>

    <string name="category_version_title">Version</string>
    <string name="version_title_head">Version</string>
    <string name="version_unknown">Unknown</string>
    <string name="update_title_head">Update</string>
    <string name="update_yes">Update Now</string>
    <string name="update_no">Cancel</string>
    <string name="update_inst">Install ROM update?</string>
    <string name="update_inst_wipe">WARNING: THIS UPDATE WILL WIPE YOUR PHONE!\n\nInstall ROM update?</string>
    <string name="update_not_found">The ROM is up to date.</string>
    <string name="update_server_error">Server communication error</string>
    <string name="update_new_version">New version available:</string>
    <string name="update_downloading">Downloading update...</string>
    <string name="update_dl_failed">Download failed! Please try again later!</string>
    <string name="update_flash_failed">Failed to flash ROM update!</string>
    <string name="changelog_sum">Show the list of changes</string>
    <string name="update_available">ROM update available</string>
    <string name="update_notify_title">Notification</string>
    <string name="update_notify_sum">Show a notification if an update is available.</string>
    <string name="category_notification_title">Notification</string>
    <string name="category_copy_title">Copyright</string>
    <string name="category_tuning_title">Tuning</string>
    <string name="sdcard_summary_on">Mount external SD card at /mnt/sdcard (Reboot required)</string>
    <string name="sdcard_summary_off">Mount internal SD card at /mnt/sdcard (Reboot required)</string><string name="sdcard_title">SD card</string>
    <string name="devbuilds_title">Development Builds</string>
    <string name="devbuilds_sum">Include development builds in update checks.</string>
    <string name="blx_title">Battery Charging Limit</string>
    <string name="blx_sum">Set a charging limit to extend the lifetime of the battery. This will NOT extend charging cycles. It should just extend the battery life.</string>
    <string-array name="blx_entries">
        <item >Max</item>
        <item >90% (recommended)</item>
        <item >80%</item>
    </string-array>
    <string-array name="blx_values">
        <item >96</item>
        <item >90</item>
        <item >80</item>
    </string-array>
    <string name="update_check">Checking for new version...</string>
    <string name="notification_title">IONIX</string>
    
</resources>
