<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
    	android:title="@string/category_version_title">
	    <!-- Version -->
	    <com.osarmod.omparts.UpdatePreference 
	        android:key="update"
	        android:title="@string/update_title_head"/>

	    <Preference
			android:key="version"
	        android:title="@string/version_title_head"
	        android:summary="version" />
	    <Preference android:key="changelog" android:title="ChangeLog" android:summary="@string/changelog_sum"/><CheckBoxPreference android:key="devbuilds" android:summary="@string/devbuilds_sum" android:title="@string/devbuilds_title" />
	    
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/category_notification_title"><CheckBoxPreference android:summary="@string/update_notify_sum" android:title="@string/update_notify_title" android:key="notification" /></PreferenceCategory><PreferenceCategory android:title="@string/category_tuning_title">
		
		<ListPreference android:title="@string/blx_title" android:key="blx" android:summary="@string/blx_sum" android:dialogTitle="@string/blx_title" android:entries="@array/blx_entries" android:entryValues="@array/blx_values"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/category_copy_title">
	    <Preference android:title="Andreas Pohl" android:summary="&lt;apohl79@gmail.com&gt;" android:key="copyright" />
 	</PreferenceCategory>
	
</PreferenceScreen>
